Closed
Bug 1197455
Opened 10 years ago
Closed 10 years ago
crash in ps_set_search trying to use Vaani.
Categories
(Firefox OS Graveyard :: Gaia::VoiceControl, defect)
Tracking
(blocking-b2g:2.5+, firefox43 fixed, b2g-master fixed)
People
(Reporter: nhirata, Assigned: kdavis)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
1.17 KB,
patch
|
anatal
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-a42f1d0b-c29e-4f5b-9391-3df0e2150822.
=============================================================
Crashing Thread
Frame Module Signature Source
0 libxul.so ps_set_search /home/worker/workspace/gecko/media/pocketsphinx/src/pocketsphinx.c:455
1 libxul.so mozilla::PocketSphinxSpeechRecognitionService::ValidateAndSetGrammarList(mozilla::dom::SpeechGrammar*, nsISpeechGrammarCompilationCallback*) /home/worker/workspace/gecko/dom/media/webspeech/recognition/PocketSphinxSpeechRecognitionService.cpp:271
2 libxul.so mozilla::dom::SpeechRecognition::ValidateAndSetGrammarList(mozilla::ErrorResult&) /home/worker/workspace/gecko/dom/media/webspeech/recognition/SpeechRecognition.cpp:815
3 libxul.so mozilla::dom::SpeechRecognition::Start(mozilla::dom::Optional<mozilla::dom::NonNull<mozilla::DOMMediaStream> > const&, mozilla::ErrorResult&) /home/worker/workspace/gecko/dom/media/webspeech/recognition/SpeechRecognition.cpp:725
4 libxul.so mozilla::dom::SpeechRecognitionBinding::start /home/worker/workspace/B2G/objdir-gecko/dom/bindings/SpeechRecognitionBinding.cpp:421
5 libxul.so mozilla::dom::GenericBindingMethod(JSContext*, unsigned int, JS::Value*) /home/worker/workspace/gecko/dom/bindings/BindingUtils.cpp:2602
6 libxul.so js::Invoke(JSContext*, JS::CallArgs, js::MaybeConstruct) /home/worker/workspace/gecko/js/src/jscntxtinlines.h:235
7 libxul.so Interpret /home/worker/workspace/gecko/js/src/vm/Interpreter.cpp:3058
8 libxul.so js::RunScript(JSContext*, js::RunState&) /home/worker/workspace/gecko/js/src/vm/Interpreter.cpp:704
9 libxul.so js::Invoke(JSContext*, JS::CallArgs, js::MaybeConstruct) /home/worker/workspace/gecko/js/src/vm/Interpreter.cpp:781
10 libxul.so js::Invoke(JSContext*, JS::Value const&, JS::Value const&, unsigned int, JS::Value const*, JS::MutableHandle<JS::Value>) /home/worker/workspace/gecko/js/src/vm/Interpreter.cpp:818
11 libxul.so JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) /home/worker/workspace/gecko/js/src/jsapi.cpp:4606
12 libxul.so mozilla::dom::AnyCallback::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&) /home/worker/workspace/B2G/objdir-gecko/dom/bindings/PromiseBinding.cpp:79
13 libxul.so mozilla::dom::WrapperPromiseCallback::Call(JSContext*, JS::Handle<JS::Value>) /home/worker/workspace/B2G/objdir-gecko/dist/include/mozilla/dom/PromiseBinding.h:134
14 libxul.so mozilla::dom::PromiseReactionJob::Run() /home/worker/workspace/gecko/dom/promise/Promise.cpp:101
15 libxul.so mozilla::dom::Promise::PerformMicroTaskCheckpoint() /home/worker/workspace/gecko/dom/promise/Promise.cpp:506
16 libxul.so mozilla::CycleCollectedJSRuntime::AfterProcessTask(unsigned int) /home/worker/workspace/gecko/xpcom/base/CycleCollectedJSRuntime.cpp:1098
17 libxul.so XPCJSRuntime::AfterProcessTask(unsigned int) /home/worker/workspace/gecko/js/xpconnect/src/XPCJSRuntime.cpp:3628
18 libxul.so nsThread::ProcessNextEvent(bool, bool*) /home/worker/workspace/gecko/xpcom/threads/nsThread.cpp:879
19 libxul.so NS_ProcessNextEvent(nsIThread*, bool) /home/worker/workspace/gecko/xpcom/glue/nsThreadUtils.cpp:277
20 libxul.so mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /home/worker/workspace/gecko/ipc/glue/MessagePump.cpp:95
21 libxul.so MessageLoop::RunInternal() /home/worker/workspace/gecko/ipc/chromium/src/base/message_loop.cc:234
22 libxul.so MessageLoop::Run() /home/worker/workspace/gecko/ipc/chromium/src/base/message_loop.cc:227
23 libxul.so nsBaseAppShell::Run() /home/worker/workspace/gecko/widget/nsBaseAppShell.cpp:156
24 libxul.so XRE_RunAppShell /home/worker/workspace/gecko/toolkit/xre/nsEmbedFunctions.cpp:785
25 libxul.so MessageLoop::RunInternal() /home/worker/workspace/gecko/ipc/chromium/src/base/message_loop.cc:234
26 libxul.so MessageLoop::Run() /home/worker/workspace/gecko/ipc/chromium/src/base/message_loop.cc:227
27 libxul.so XRE_InitChildProcess /home/worker/workspace/gecko/toolkit/xre/nsEmbedFunctions.cpp:621
28 libxul.so content_process_main(int, char**) /home/worker/workspace/gecko/ipc/contentproc/plugin-container.cpp:237
29 libxul.so mozilla::ipc::ProcLoaderLoadRunner::DoWork() /home/worker/workspace/gecko/ipc/glue/ProcessUtils_linux.cpp:434
30 libxul.so XRE_ProcLoaderServiceRun /home/worker/workspace/gecko/ipc/glue/ProcessUtils_linux.cpp:593
31 b2g main /home/worker/workspace/gecko/b2g/app/B2GLoader.cpp:219
32 libc.so __libc_init /home/worker/workspace/B2G/bionic/libc/bionic/libc_init_dynamic.cpp:112
33 b2g b2g@0xc1da
34 linker set_soinfo_pool_protection /builds/slave/b2g_m-b37_22r_flm-kk_ntly-0000/build/bionic/linker/linker.cpp:291
35 @0xbe843a69
1. install vaani
2. go through the numerous oks to press from make shift tutorials
3. tap on the mic icon
Expected: no crash
Actual: crash
Build can be found here : https://tools.taskcluster.net/task-inspector/#qagfxX1PQRKB5QVGHI73Ng/
Vaani hash : commit 9c798b42b2fdf62d8f0b0e4aecadd8ca02b6ff94
gecko-dev : dcc2753eed912ca8c64388c54244fedf906f85ff
( http://git.mozilla.org/?p=integration/gecko-dev.git;a=commit;h=dcc2753eed912ca8c64388c54244fedf906f85ff )
gaia : 5d588c8df90aa2e46211d5f8cd0747980c1bcf5b
| Reporter | ||
Comment 1•10 years ago
|
||
[Blocking Requested - why for this release]:
blocking-b2g: --- → 2.5?
Part 1 of 1: Call ps_set_search() only after successful grammar compilation
Part 1 of 1 for this bug.
ps_set_search() should only be called to search for a grammar that has been
successfully compiled. If called to search for a grammar not successfully
compiled, it crashes as seen here.
This commit insures it is only called on a successfully compiled grammar.
Reza: This implies that some grammar in Vaani is, well, not grammatical,
you should review the grammars and find the offending one.
Try for this commit is here https://treeherder.mozilla.org/#/jobs?repo=try&revision=517a6f8f785a
Flags: needinfo?(rakhavan)
Attachment #8651394 -
Flags: review?(anatal)
Comment 3•10 years ago
|
||
The most recent grammar change was https://github.com/andrenatal/vaani/commit/9090fd9b37909b81c26e00f8196dca3fdf6d8866
Specifically adding "ow".
Flags: needinfo?(rakhavan)
Comment 4•10 years ago
|
||
(In reply to Reza Akhavan [:jedireza] from comment #3)
> The most recent grammar change was
> https://github.com/andrenatal/vaani/commit/
> 9090fd9b37909b81c26e00f8196dca3fdf6d8866
>
> Specifically adding "ow".
That doesn't seem to be the the issue. The new grammar with "ow" compiled fine [1] on my OSX and on the phone.
You need to check if an empty or malformed grammar is not being passed. If an empty grammar is passed right after the decoder start, it crashes the tab [2] on my OSX build. If you pass a malformed grammar, it crashes the whole application [3].
But, if you try both pass empty or malformed, after had a successful grammar compilation, then a normal error from pocketsphinx with no crash occur.
[1]
INFO: jsgf.c(691): Defined rule: <fxosVoiceCommands.app>
INFO: jsgf.c(691): Defined rule: <fxosVoiceCommands.digit>
INFO: jsgf.c(691): Defined rule: <fxosVoiceCommands.g00002>
INFO: jsgf.c(691): Defined rule: PUBLIC <fxosVoiceCommands.simple>
INFO: jsgf.c(359): Right recursion <fxosVoiceCommands.g00002> 3 => 1
INFO: fsg_model.c(215): Computing transitive closure for null transitions
INFO: fsg_model.c(277): 0 null transitions added
INFO: fsg_search.c(240): FSG(beam: -1080, pbeam: -1080, wbeam: -634; wip: -26, pip: 0)
INFO: fsg_model.c(428): Adding silence transitions for <sil> to FSG
INFO: fsg_model.c(448): Added 5 silence word transitions
INFO: fsg_model.c(428): Adding silence transitions for <sil> to FSG
INFO: fsg_model.c(448): Added 5 silence word transitions
INFO: fsg_model.c(428): Adding silence transitions for [NOISE] to FSG
INFO: fsg_model.c(448): Added 5 silence word transitions
INFO: fsg_search.c(187): Added 10 alternate word transitions
INFO: fsg_lextree.c(110): Allocated 430 bytes (0 KiB) for left and right context phones
INFO: fsg_lextree.c(256): 339 HMM nodes in lextree (225 leaves)
INFO: fsg_lextree.c(259): Allocated 48816 bytes (47 KiB) for all lextree nodes
INFO: fsg_lextree.c(262): Allocated 32400 bytes (31 KiB) for lextree leafnodes
[2]
ERROR: "jsgf_parser.y", line 155: syntax error, unexpected $end, expecting HEADER at line -1515870811 current token ''
ERROR: "jsgf.c", line 933: Failed to parse JSGF grammar from input string
--DOCSHELL 0x135f5f800 == 7 [pid = 96597] [id = 11]
--DOMWINDOW == 16 (0x127386400) [pid = 96597] [serial = 30] [outer = 0x121352c00] [url = about:blank]
###!!! [Parent][MessageChannel] Error: (msgtype=0x200084,name=PBrowser::Msg_Destroy) Channel error: cannot send/recv
[3]
Assertion failure: !sIPCServingParent, at /Users/anatal/projects/mozilla/gecko-dev-speech/dom/media/systemservices/MediaParent.cpp:537
[Child 96633] WARNING: nsWindow::GetNativeData called with bad value: file /Users/anatal/projects/mozilla/gecko-dev-speech/widget/PuppetWidget.cpp, line 1077
#01: mozilla::ipc::MessageChannel::DispatchAsyncMessage(IPC::Message const&)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x4ac7ff]
#02: mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message const&)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x4ab4d4]
#03: mozilla::ipc::MessageChannel::OnMaybeDequeueOne()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x4a5a3f]
#04: MessageLoop::DeferOrRunPendingTask(MessageLoop::PendingTask const&)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x479f8d]
#05: MessageLoop::DoWork()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x47a29b]
#06: mozilla::ipc::DoWorkRunnable::Run()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x4afff5]
#07: nsThread::ProcessNextEvent(bool, bool*)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0xe1508]
#08: NS_ProcessPendingEvents(nsIThread*, unsigned int)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x11cd2f]
#09: nsBaseAppShell::NativeEventCallback()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x2823294]
#10: nsAppShell::ProcessGeckoEvents(void*)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x2875ebe]
#11: __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__[/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation +0x80a01]
#12: __CFRunLoopDoSources0[/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation +0x72b8d]
#13: __CFRunLoopRun[/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation +0x721bf]
#14: CFRunLoopRunSpecific[/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation +0x71bd8]
#15: RunCurrentEventLoopInMode[/System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox +0x3256f]
#16: ReceiveNextEventCommon[/System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox +0x322ea]
#17: _BlockUntilNextEventMatchingListInModeWithFilter[/System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox +0x3212b]
#18: _DPSNextEvent[/System/Library/Frameworks/AppKit.framework/Versions/C/AppKit +0x918ab]
#19: -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:][/System/Library/Frameworks/AppKit.framework/Versions/C/AppKit +0x90e58]
#20: -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:][/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x2875116]
#21: -[NSApplication run][/System/Library/Frameworks/AppKit.framework/Versions/C/AppKit +0x86af3]
#22: nsAppShell::Run()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x28765e5]
#23: nsAppStartup::Run()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x33a15c9]
#24: XREMain::XRE_mainRun()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x341ef50]
#25: XREMain::XRE_main(int, char**, nsXREAppData const*)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x341f788]
#26: XRE_main[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x341fc5a]
#27: main[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/firefox +0x2145]
--DOMWINDOW == 2 (0x11b6be000) [pid = 96633] [serial = 2] [outer = 0x11b637c00] [url = about:blank]
Assertion failure: !mCanSend, at /Users/anatal/projects/mozilla/gecko-dev-speech/gfx/layers/ipc/CompositorChild.cpp:392
[Child 96633] ###!!! ABORT: Aborting on channel error.: file /Users/anatal/projects/mozilla/gecko-dev-speech/ipc/glue/MessageChannel.cpp, line 1762
#01: mozilla::ipc::ProcessLink::OnChannelError()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x4af417]
#01: mozilla::layers::PCompositorChild::OnChannelError()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x7e8d03]
#02: IPC::Channel::ChannelImpl::OnFileCanReadWithoutBlocking(int)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x48cbf9]
#02: mozilla::ipc::MessageChannel::NotifyMaybeChannelError()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x4ad37f]
#03: event_base_loop[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x46ee5f]
#03: MessageLoop::DeferOrRunPendingTask(MessageLoop::PendingTask const&)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x479f8d]
#04: base::MessagePumpLibevent::Run(base::MessagePump::Delegate*)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x47b485]
mozillas-MacBook-Pro:gecko-dev-speech anatal$
#04: MessageLoop::DoWork()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x47a29b]
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$ #05: mozilla::ipc::DoWorkRunnable::Run()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x4afff5]
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
#05: MessageLoop::Run()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x4795dc]
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
#06: nsThread::ProcessNextEvent(bool, bool*)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0xe1508]
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$
mozillas-MacBook-Pro:gecko-dev-speech anatal$ #06: base::Thread::ThreadMain()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x48443d]
#07: NS_ProcessPendingEvents(nsIThread*, unsigned int)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x11cd2f]
#07: ThreadFunc(void*)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x48454a]
#08: nsBaseAppShell::NativeEventCallback()[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x2823294]
#08: _pthread_body[/usr/lib/system/libsystem_pthread.dylib +0x405a]
#09: nsAppShell::ProcessGeckoEvents(void*)[/Users/anatal/projects/mozilla/gecko-dev-speech/obj-x86_64-apple-darwin14.5.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x2875ebe]
#09: _pthread_body[/usr/lib/system/libsystem_pthread.dylib +0x3fd7]
[Child 96633] ###!!! ABORT: Aborting on channel error.: file /Users/anatal/projects/mozilla/gecko-dev-speech/ipc/glue/MessageChannel.cpp, line 1762
Hit MOZ_CRASH() at /Users/anatal/projects/mozilla/gecko-dev-speech/memory/mozalloc/mozalloc_abort.cpp:33
#10: __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__[/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation +0x80a01]
[4]
ERROR: "jsgf_parser.y", line 155: syntax error, unexpected $end at line -1515870810 current token ''
ERROR: "jsgf.c", line 933: Failed to parse JSGF grammar from input string
Comment 5•10 years ago
|
||
(In reply to Naoki Hirata :nhirata (please use needinfo instead of cc) from comment #0)
> This bug was filed from the Socorro interface and is
> report bp-a42f1d0b-c29e-4f5b-9391-3df0e2150822.
> =============================================================
> Crashing Thread
> Frame Module Signature Source
Can't you please provide the logcat error? There are no information about the decoder initialization and its behavior on this log that is required to diagnose the situation.
Updated•10 years ago
|
Attachment #8651394 -
Flags: review?(anatal) → review+
Comment 6•10 years ago
|
||
(In reply to kdavis from comment #2)
> Created attachment 8651394 [details] [diff] [review]
> Part 1 of 1: Call ps_set_search() only after successful grammar compilation
>
> Part 1 of 1: Call ps_set_search() only after successful grammar compilation
>
> Part 1 of 1 for this bug.
>
> ps_set_search() should only be called to search for a grammar that has been
> successfully compiled. If called to search for a grammar not successfully
> compiled, it crashes as seen here.
>
> This commit insures it is only called on a successfully compiled grammar.
>
> Reza: This implies that some grammar in Vaani is, well, not grammatical,
> you should review the grammars and find the offending one.
>
> Try for this commit is here
> https://treeherder.mozilla.org/#/jobs?repo=try&revision=517a6f8f785a
Thank you Kelly. This fixed the crashes. We still need to understand what's being passed to ValidateAndSetGrammarList otherwise the app won't work.
Keywords: checkin-needed
Keywords: checkin-needed
Updated•10 years ago
|
blocking-b2g: 2.5? → 2.5+
Comment 8•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox43:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S6 (04Sep)
Updated•10 years ago
|
status-b2g-master:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•