Bug 1197455 - Call ps_set_search() only after successful grammar compilation. r=anatal